[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "medium-scraper"
version = "0.1.1"
description = "High-scale Medium scraper: request abstraction and HTML->Markdown parser"
authors = [{ name = "Sarper AVCI" }]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "curl_cffi",
  "beautifulsoup4>=4.12.0",
  "markdownify>=0.13.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["medium_scraper*"] 